package lesson3.ocp;
// Интерфейс `Shape` объявляет абстрактный метод `area()`, который реализуется в подклассах Square и RightTriangle.
public interface Shape {
    double area();

}
